feat: admin role в Customer и server-side защита write API
Добавляет ROLE_USER/ROLE_ADMIN, role в JWT и profile, @RequiresAdmin на write-эндпоинтах,
интеграционные тесты авторизации, ddl-auto update для Docker и grant_admin.sh для dev.

Co-authored-by: Cursor <cursoragent@cursor.com>